--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -449,55 +449,6 @@ img {
   align-items: center;
 }
 
-.hero {
-  color: black;
-  text-align: center;
-}
-
-.section-hero {
-  max-width: 1600px;
-  height: 600px;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero.jpg");
-  background-position: 50% 50%;
-  padding-top: 200px;
-  padding-bottom: 200px;
-  margin-left: auto;
-  margin-right: auto;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.hero-title {
-  display: block;
-  width: 696px;
-  margin-right: auto;
-  margin-left: auto;
-  margin-bottom: 30px;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: var(--button-select-text-color);
-}
-
-.hero .button-hero {
-  border-radius: 4px;
-  border: none;
-  padding: 10px 32px;
-  min-width: 216px;
-  color: var(--button-select-text-color);
-  background-color: var(--button-select-color);
-  font-size: 16px;
-  font-weight: 700;
-  text-align: center;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  cursor: pointer;
-}
-
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -520,126 +471,6 @@ img {
 
 .section.top-padd-minus {
   padding-top: 0;
-}
-
-.feauture-list {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.icon-box {
-  display: flex;
-  width: 270px;
-  height: 120px;
-  background-color: #f5f4fa;
-  justify-content: center;
-  border-radius: 4px;
-  margin-bottom: 30px;
-}
-
-.icon {
-  display: inline-block;
-  height: 70px;
-  width: 70px;
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-.feauture-list .item {
-  width: 270px;
-}
-
-.feauture-list .item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.feauture-list .title {
-  margin-bottom: 10px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-}
-
-.feauture-list .text {
-  font-weight: 400;
-  line-height: 1.71;
-  font-size: 14px;
-}
-
-.our-work {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.our-work .item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.our-work .item {
-  position: relative;
-}
-
-.our-work .shadow-box {
-  position: absolute;
-  display: block;
-  bottom: 0;
-  padding-top: 25px;
-  width: 370px;
-  height: 70px;
-  justify-content: center;
-  letter-spacing: 0.03em;
-  background: rgba(47, 48, 58, 0.8);
-}
-
-.our-work .our-work-header {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  text-align: center;
-  text-transform: uppercase;
-  color: #ffffff;
-}
-
-.section.team {
-  background-color: var(--bg-team-section-color);
-}
-
-.team-list {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.team-list > .item {
-  background-color: var(--button-select-text-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-
-.team-list .team-name {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.team-list .item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.team-list .com-title {
-  margin-bottom: 10px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.2;
-  text-align: center;
-}
-
-.team-list .com-text {
-  font-weight: 400;
-  text-align: center;
-  font-size: 16px;
-  line-height: 1.2;
-  margin-bottom: 16px;
 }
 
 .team .social-list {
@@ -702,43 +533,108 @@ img {
   fill: var(--button-select-text-color);
 }
 
-.client-list {
+.button {
+  border-radius: 4px;
+  border: none;
+  padding: 6px 22px;
+  min-width: 73px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shad 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button:hover,
+.button:focus {
+  color: var(--button-select-text-color);
+  background-color: var(--button-select-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  cursor: pointer;
+}
+
+/* Картки портфоліо */
+.card {
+  color: var(--primary-text-color);
+}
+
+.shadow-text {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 370px;
+  height: 294px;
+  padding: 63px 24px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  background: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-list .item {
+  transition: shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list .item:hover .shadow-text,
+.portfolio-list .item:focus .shadow-text {
+  transform: translateY(0%);
+}
+
+.portfolio-list .item:hover,
+.portfolio-list .item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.card .card-header {
+  color: var(--title-text-color);
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  font-weight: 700;
+}
+
+.card .card-text {
+  font-size: 16px;
+  line-height: 1.88;
+  font-weight: 400;
+}
+
+.portfolio-list {
   display: flex;
   flex-wrap: wrap;
+  gap: 30px;
 }
 
-.client-list .item:not(:last-child) {
-  margin-right: 30px;
+.portfolio-list .project {
+  padding: 20px 24px;
+  border: 1px solid #eeeeee;
+  border-top: transparent;
 }
 
-.client-list .item {
+.list-buttom {
   display: flex;
-}
-
-.item .client {
-  display: flex;
-  width: 170px;
-  height: 92px;
   justify-content: center;
-  align-content: center;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-  fill: #afb1b8;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-bottom: 50px;
 }
 
-.item .client:hover,
-.item .client:focus {
-  border: 1px solid var(--select-text-color);
-  fill: var(--select-text-color);
+.list-buttom .item:not(:last-child) {
+  margin-right: 8px;
 }
 
-.svg-client {
-  display: inline-block;
-  width: 106px;
-  height: 60px;
-  margin-top: auto;
-  margin-bottom: auto;
+.list-buttom.item {
+  display: block;
+  text-align: center;
 }
 
 .backdrop {
@@ -1119,4 +1015,4 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border-color: var(--button-select-color);
-}/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=portfolio.css.map */
