--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -1,4 +1,3 @@
-
 @import "./utils/vars";
 @import "./base/normalize";
 
@@ -8,20 +7,13 @@
 @import "./components/logo";
 @import "./components/header";
 
-@import "./components/hero";
 @import "./components/section";
-
-@import "./components/_feauture";
-@import "./components/ourwork";
-@import "./components/team";
 @import "./components/sociallist";
 
-@import "./components/clients";
 
-
+@import "./components/portfolio";
 
 @import "./components/modal";
 
 
 @import "./components/footer";
-
