--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,16 +1,14 @@
-.hero {
-    color: black;
+  .hero_section {
+    display: block;
+    justify-items: center;
+    align-items: center;
     text-align: center;
-  }
-  
-  .section-hero {
+
     max-width: 1600px;
     height: 600px;
-    background-image: linear-gradient(
-        to right,
+    background-image: linear-gradient(to right,
         rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
+        rgba(47, 48, 58, 0.4)),
       url("../images/hero.jpg");
     background-position: 50% 50%;
     padding-top: 200px;
@@ -21,14 +19,14 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
-  
-  .hero-title {
+
+  .hero__title {
     display: block;
     width: 696px;
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 30px;
-  
+
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -37,12 +35,14 @@
     text-transform: uppercase;
     color: var(--button-select-text-color);
   }
-  .hero .button-hero {
+
+  .hero__button {
+    display: inline-block;
     border-radius: 4px;
     border: none;
     padding: 10px 32px;
     min-width: 216px;
-  
+
     color: var(--button-select-text-color);
     background-color: var(--button-select-color);
     font-size: 16px;
