--- a/sass/components/_sociallist.scss
+++ b/sass/components/_sociallist.scss
@@ -61,3 +61,22 @@
     background: var(--select-text-color);
     fill: var(--button-select-text-color);
   }
+
+
+  .social-list .item-link-footer {
+    display: flex;
+    width: 44px;
+    height: 44px;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    box-shadow: none;
+    justify-content: center;
+    align-items: center;
+    fill: #ffffff;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
+  .social-list .item-link-footer:hover,
+  .social-list .item-link-footer:focus {
+    background: var(--select-text-color);
+  }
