--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,38 +1,38 @@
-.section.team {
-    background-color: var(--bg-team-section-color);
+.team {
+  background-color: var(--bg-team-section-color);
+}
+
+.team-list {
+  display: flex;
+  flex-wrap: wrap;
+
+  &__item:not(:last-child) {
+    margin-right: 30px;
   }
-  
-  .team-list {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .team-list > .item {
+
+  &__item {
     background-color: var(--button-select-text-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
   }
-  
-  .team-list .team-name {
+
+  .team__card {
+    display: block;
     padding-top: 30px;
     padding-bottom: 30px;
   }
-  
-  .team-list .item:not(:last-child) {
-    margin-right: 30px;
-  }
-  
-  .team-list .com-title {
+
+  .team__title {
     margin-bottom: 10px;
-  
+
     font-weight: 500;
     font-size: 16px;
     line-height: 1.2;
     text-align: center;
   }
-  
-  .team-list .com-text {
+
+  .team__text {
     font-weight: 400;
     text-align: center;
     font-size: 16px;
@@ -40,3 +40,4 @@
     margin-bottom: 16px;
   }
 
+}
