--- a/css/main.css
+++ b/css/main.css
@@ -357,22 +357,25 @@ img {
   color: var(--second-color-logo-footer);
 }
 
-.page-header {
+.page__header {
   color: var(--title-text-color);
   background-color: var(--button-select-text-color);
   border: transparent;
   border-bottom: 1px solid #ececec;
 }
 
+.main-nav {
+  display: flex;
+  align-items: center;
+}
+
 .site-nav {
   display: flex;
 }
-
-.site-nav .item:not(:last-child) {
+.site-nav__item:not(:last-child) {
   margin-right: 50px;
 }
-
-.site-nav .link {
+.site-nav__link {
   position: relative;
   display: block;
   padding: 32px 0;
@@ -383,8 +386,10 @@ img {
   letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.link.current::after {
+.site-nav__link.current {
+  color: var(--select-text-color);
+}
+.site-nav__link.current::after {
   content: "";
   position: absolute;
   left: 0;
@@ -397,13 +402,7 @@ img {
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.link:hover,
-.link:focus {
-  color: var(--select-text-color);
-}
-
-.site-nav .link.current {
+.site-nav__link:hover, .site-nav__link:focus {
   color: var(--select-text-color);
 }
 
@@ -411,12 +410,14 @@ img {
   display: flex;
   margin-left: auto;
 }
-
-.auth-nav .item {
+.auth-nav__item {
   display: flex;
 }
+.auth-nav__item:not(:last-child) {
+  margin-right: 50px;
+}
 
-.link-contact {
+.auth-nav__link {
   display: flex;
   padding: 32px 0;
   color: var(--primary-text-color);
@@ -426,32 +427,16 @@ img {
   letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.svg-contact {
-  margin-right: 10px;
-  margin-top: auto;
-  margin-bottom: auto;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.link-contact:hover,
-.link-contact:focus {
+.auth-nav__link:hover, .auth-nav__link:focus {
   color: var(--select-text-color);
   fill: var(--select-text-color);
 }
 
-.auth-nav .item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.auth-nav .link:hover,
-.auth-nav .link:focus {
-  color: var(--select-text-color);
-}
-
-.main-nav {
-  display: flex;
-  align-items: center;
+.auth-nav__svg {
+  margin-right: 10px;
+  margin-top: auto;
+  margin-bottom: auto;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero_section {
@@ -508,6 +493,16 @@ img {
   padding-bottom: 94px;
   background-color: var(--button-select-text-color);
 }
+.section__title {
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+}
+.section--padd-minus {
+  padding-top: 0;
+}
 
 .section h1,
 .section h2,
@@ -515,24 +510,30 @@ img {
   color: var(--title-text-color);
 }
 
-.section-title {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-}
-
-.section.top-padd-minus {
-  padding-top: 0;
-}
-
 .feauture-list {
   display: flex;
   flex-wrap: wrap;
 }
+.feauture-list__item {
+  width: 270px;
+}
+.feauture-list__item:not(:last-child) {
+  margin-right: 30px;
+}
+.feauture-list__title {
+  margin-bottom: 10px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+}
+.feauture-list__text {
+  font-weight: 400;
+  line-height: 1.71;
+  font-size: 14px;
+}
 
-.icon-box {
+.feauture__icon-box {
   display: flex;
   width: 270px;
   height: 120px;
@@ -542,7 +543,7 @@ img {
   margin-bottom: 30px;
 }
 
-.icon {
+.feauture__icon {
   display: inline-block;
   height: 70px;
   width: 70px;
@@ -550,42 +551,17 @@ img {
   margin-bottom: auto;
 }
 
-.feauture-list .item {
-  width: 270px;
-}
-
-.feauture-list .item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.feauture-list .title {
-  margin-bottom: 10px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-}
-
-.feauture-list .text {
-  font-weight: 400;
-  line-height: 1.71;
-  font-size: 14px;
-}
-
-.our-work {
+.work-list {
   display: flex;
   flex-wrap: wrap;
 }
-
-.our-work .item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.our-work .item {
+.work-list__item {
   position: relative;
 }
-
-.our-work .shadow-box {
+.work-list__item:not(:last-child) {
+  margin-right: 30px;
+}
+.work-list .shadow-box {
   position: absolute;
   display: block;
   bottom: 0;
@@ -596,8 +572,7 @@ img {
   letter-spacing: 0.03em;
   background: rgba(47, 48, 58, 0.8);
 }
-
-.our-work .our-work-header {
+.work-list .work__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
@@ -607,7 +582,7 @@ img {
   color: #ffffff;
 }
 
-.section.team {
+.team {
   background-color: var(--bg-team-section-color);
 }
 
@@ -615,31 +590,27 @@ img {
   display: flex;
   flex-wrap: wrap;
 }
-
-.team-list > .item {
+.team-list__item:not(:last-child) {
+  margin-right: 30px;
+}
+.team-list__item {
   background-color: var(--button-select-text-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-
-.team-list .team-name {
+.team-list .team__card {
+  display: block;
   padding-top: 30px;
   padding-bottom: 30px;
 }
-
-.team-list .item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.team-list .com-title {
+.team-list .team__title {
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.2;
   text-align: center;
 }
-
-.team-list .com-text {
+.team-list .team__text {
   font-weight: 400;
   text-align: center;
   font-size: 16px;
@@ -647,49 +618,27 @@ img {
   margin-bottom: 16px;
 }
 
-.team .social-list {
-  display: flex;
-  margin-left: 32px;
-}
-
-.team .social-list {
-  margin-left: 32px;
-}
-
-.svg-social {
-  width: 20px;
-  height: 20px;
-}
-
-.social-link .title-social {
-  margin-bottom: 20px;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--addr-color-city);
-}
-
-.social-link {
+.social {
   display: block;
   min-width: 206px;
 }
 
-.social-list {
-  display: flex;
+.social__svg {
+  width: 20px;
+  height: 20px;
 }
 
-.social-list .item {
+.social__list {
+  display: flex;
+  margin-left: 32px;
+}
+.social__list .item {
   display: flex;
 }
-
-.social-list .item:not(:last-child) {
+.social__list .item:not(:last-child) {
   margin-right: 10px;
 }
-
-.social-list .item-link-team {
+.social__list .social__link {
   display: flex;
   width: 44px;
   height: 44px;
@@ -700,45 +649,22 @@ img {
   fill: #afb1b8;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.social-list .item-link-team:hover,
-.social-list .item-link-team:focus {
+.social__list .social__link:hover, .social__list .social__link:focus {
   background: var(--select-text-color);
   fill: var(--button-select-text-color);
 }
 
-.social-list .item-link-footer {
-  display: flex;
-  width: 44px;
-  height: 44px;
-  background: rgba(255, 255, 255, 0.1);
-  border-radius: 50%;
-  box-shadow: none;
-  justify-content: center;
-  align-items: center;
-  fill: #ffffff;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-list .item-link-footer:hover,
-.social-list .item-link-footer:focus {
-  background: var(--select-text-color);
-}
-
-.client-list {
+.client__list {
   display: flex;
   flex-wrap: wrap;
 }
-
-.client-list .item:not(:last-child) {
+.client__list .client__item:not(:last-child) {
   margin-right: 30px;
 }
-
-.client-list .item {
+.client__list .client__item {
   display: flex;
 }
-
-.item .client {
+.client__list .client__link {
   display: flex;
   width: 170px;
   height: 92px;
@@ -749,14 +675,11 @@ img {
   fill: #afb1b8;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.item .client:hover,
-.item .client:focus {
+.client__list .client__link:hover, .client__list .client__link:focus {
   border: 1px solid var(--select-text-color);
   fill: var(--select-text-color);
 }
-
-.svg-client {
+.client__list .client__svg {
   display: inline-block;
   width: 106px;
   height: 60px;
@@ -986,6 +909,34 @@ img {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+.footer .social__title {
+  margin-bottom: 20px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--addr-color-city);
+}
+.footer .social__list--between {
+  margin-left: 0px;
+}
+.footer .social__link {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  box-shadow: none;
+  justify-content: center;
+  align-items: center;
+  fill: #ffffff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer .social__link:hover, .footer .social__link:focus {
+  background: var(--select-text-color);
 }
 
 .addr {
