--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -357,22 +357,25 @@ img {
   color: var(--second-color-logo-footer);
 }
 
-.page-header {
+.page__header {
   color: var(--title-text-color);
   background-color: var(--button-select-text-color);
   border: transparent;
   border-bottom: 1px solid #ececec;
 }
 
+.main-nav {
+  display: flex;
+  align-items: center;
+}
+
 .site-nav {
   display: flex;
 }
-
-.site-nav .item:not(:last-child) {
+.site-nav__item:not(:last-child) {
   margin-right: 50px;
 }
-
-.site-nav .link {
+.site-nav__link {
   position: relative;
   display: block;
   padding: 32px 0;
@@ -383,8 +386,10 @@ img {
   letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.link.current::after {
+.site-nav__link.current {
+  color: var(--select-text-color);
+}
+.site-nav__link.current::after {
   content: "";
   position: absolute;
   left: 0;
@@ -397,13 +402,7 @@ img {
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.link:hover,
-.link:focus {
-  color: var(--select-text-color);
-}
-
-.site-nav .link.current {
+.site-nav__link:hover, .site-nav__link:focus {
   color: var(--select-text-color);
 }
 
@@ -411,12 +410,14 @@ img {
   display: flex;
   margin-left: auto;
 }
-
-.auth-nav .item {
+.auth-nav__item {
   display: flex;
 }
+.auth-nav__item:not(:last-child) {
+  margin-right: 50px;
+}
 
-.link-contact {
+.auth-nav__link {
   display: flex;
   padding: 32px 0;
   color: var(--primary-text-color);
@@ -426,38 +427,32 @@ img {
   letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.auth-nav__link:hover, .auth-nav__link:focus {
+  color: var(--select-text-color);
+  fill: var(--select-text-color);
+}
 
-.svg-contact {
+.auth-nav__svg {
   margin-right: 10px;
   margin-top: auto;
   margin-bottom: auto;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link-contact:hover,
-.link-contact:focus {
-  color: var(--select-text-color);
-  fill: var(--select-text-color);
-}
-
-.auth-nav .item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.auth-nav .link:hover,
-.auth-nav .link:focus {
-  color: var(--select-text-color);
-}
-
-.main-nav {
-  display: flex;
-  align-items: center;
-}
-
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
   background-color: var(--button-select-text-color);
+}
+.section__title {
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+}
+.section--padd-minus {
+  padding-top: 0;
 }
 
 .section h1,
@@ -466,61 +461,27 @@ img {
   color: var(--title-text-color);
 }
 
-.section-title {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-}
-
-.section.top-padd-minus {
-  padding-top: 0;
-}
-
-.team .social-list {
-  display: flex;
-  margin-left: 32px;
-}
-
-.team .social-list {
-  margin-left: 32px;
-}
-
-.svg-social {
-  width: 20px;
-  height: 20px;
-}
-
-.social-link .title-social {
-  margin-bottom: 20px;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--addr-color-city);
-}
-
-.social-link {
+.social {
   display: block;
   min-width: 206px;
 }
 
-.social-list {
-  display: flex;
+.social__svg {
+  width: 20px;
+  height: 20px;
 }
 
-.social-list .item {
+.social__list {
+  display: flex;
+  margin-left: 32px;
+}
+.social__list .item {
   display: flex;
 }
-
-.social-list .item:not(:last-child) {
+.social__list .item:not(:last-child) {
   margin-right: 10px;
 }
-
-.social-list .item-link-team {
+.social__list .social__link {
   display: flex;
   width: 44px;
   height: 44px;
@@ -531,32 +492,24 @@ img {
   fill: #afb1b8;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.social-list .item-link-team:hover,
-.social-list .item-link-team:focus {
+.social__list .social__link:hover, .social__list .social__link:focus {
   background: var(--select-text-color);
   fill: var(--button-select-text-color);
 }
 
-.social-list .item-link-footer {
+.button-list {
   display: flex;
-  width: 44px;
-  height: 44px;
-  background: rgba(255, 255, 255, 0.1);
-  border-radius: 50%;
-  box-shadow: none;
   justify-content: center;
-  align-items: center;
-  fill: #ffffff;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-bottom: 50px;
 }
-
-.social-list .item-link-footer:hover,
-.social-list .item-link-footer:focus {
-  background: var(--select-text-color);
+.button-list__item {
+  display: block;
+  text-align: center;
 }
-
-.button {
+.button-list__item:not(:last-child) {
+  margin-right: 8px;
+}
+.button-list__button {
   border-radius: 4px;
   border: none;
   padding: 6px 22px;
@@ -568,21 +521,14 @@ img {
   letter-spacing: 0.03em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shad 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.button:hover,
-.button:focus {
+.button-list__button:hover, .button-list__button:focus {
   color: var(--button-select-text-color);
   background-color: var(--button-select-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   cursor: pointer;
 }
 
-/* Картки портфоліо */
-.card {
-  color: var(--primary-text-color);
-}
-
-.shadow-text {
+.shadow__text {
   display: inline-block;
   position: absolute;
   top: 0;
@@ -599,38 +545,13 @@ img {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.portfolio-list__item:hover .shadow__text, .portfolio-list__item:focus .shadow__text {
+  transform: translateY(0%);
+}
 
 .portfolio-wrap {
   position: relative;
   overflow: hidden;
-}
-
-.portfolio-list .item {
-  transition: shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-list .item:hover .shadow-text,
-.portfolio-list .item:focus .shadow-text {
-  transform: translateY(0%);
-}
-
-.portfolio-list .item:hover,
-.portfolio-list .item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.card .card-header {
-  color: var(--title-text-color);
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  font-weight: 700;
-}
-
-.card .card-text {
-  font-size: 16px;
-  line-height: 1.88;
-  font-weight: 400;
 }
 
 .portfolio-list {
@@ -638,26 +559,32 @@ img {
   flex-wrap: wrap;
   gap: 30px;
 }
-
-.portfolio-list .project {
+.portfolio-list__item {
+  transition: shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-list__item:hover, .portfolio-list__item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.portfolio-list__project {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: transparent;
 }
 
-.list-buttom {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+.portfolio__card {
+  color: var(--primary-text-color);
 }
-
-.list-buttom .item:not(:last-child) {
-  margin-right: 8px;
+.portfolio__card .card__header {
+  color: var(--title-text-color);
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  font-weight: 700;
 }
-
-.list-buttom.item {
-  display: block;
-  text-align: center;
+.portfolio__card .card__text {
+  font-size: 16px;
+  line-height: 1.88;
+  font-weight: 400;
 }
 
 .backdrop {
@@ -882,6 +809,34 @@ img {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+.footer .social__title {
+  margin-bottom: 20px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--addr-color-city);
+}
+.footer .social__list--between {
+  margin-left: 0px;
+}
+.footer .social__link {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  box-shadow: none;
+  justify-content: center;
+  align-items: center;
+  fill: #ffffff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer .social__link:hover, .footer .social__link:focus {
+  background: var(--select-text-color);
 }
 
 .addr {
