--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,38 +1,45 @@
-.client-list {
+.client__list {
     display: flex;
     flex-wrap: wrap;
+    
+    .client__item:not(:last-child) {
+      margin-right: 30px;
+    }
+
+    .client__item {
+      display: flex;
+    }
+
+    .client__link {
+      display: flex;
+      width: 170px;
+      height: 92px;
+      justify-content: center;
+      align-content: center;
+      border: 1px solid #afb1b8;
+      border-radius: 4px;
+      fill: #afb1b8;
+      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      
+      &:hover,
+      &:focus {
+          border: 1px solid var(--select-text-color);
+          fill: var(--select-text-color);
+        }
+       
+    }
+
+    .client__svg {
+      display: inline-block;
+      width: 106px;
+      height: 60px;
+      margin-top: auto;
+      margin-bottom: auto;
+    }  
   }
   
-  .client-list .item:not(:last-child) {
-    margin-right: 30px;
-  }
-  .client-list .item {
-    display: flex;
-  }
   
-  .item .client {
-    display: flex;
-    width: 170px;
-    height: 92px;
-    justify-content: center;
-    align-content: center;
-    border: 1px solid #afb1b8;
-    border-radius: 4px;
-    fill: #afb1b8;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
   
-  .item .client:hover,
-  .item .client:focus {
-    border: 1px solid var(--select-text-color);
-    fill: var(--select-text-color);
-  }
   
-  .svg-client {
-    display: inline-block;
-    width: 106px;
-    height: 60px;
-    margin-top: auto;
-    margin-bottom: auto;
-  }
+  
