--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,71 +1,81 @@
 
 
-  .page-header {
+  .page__header {
     color: var(--title-text-color);
     background-color: var(--button-select-text-color);
     border: transparent;
     border-bottom: 1px solid #ececec;
   }
   
+  .main-nav {
+    display: flex;
+    align-items: center;
+  }
+
   .site-nav {
     display: flex;
-  }
-  
-  .site-nav .item:not(:last-child) {
-    margin-right: 50px;
-  }
-  
-  .site-nav .link {
-    position: relative;
-  
-    display: block;
-    padding: 32px 0;
-  
-    color: var(--title-text-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-  
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .link.current::after {
-    content: "";
-  
-    position: absolute;
-    left: 0;
-    bottom: 0;
-  
-    display: block;
-    width: 100%;
-    height: 4px;
-    background: var(--button-select-color);
-    border-radius: 2px;
-  
-    opacity: 1;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .link:hover,
-  .link:focus {
-    color: var(--select-text-color);
-  }
-  
-  .site-nav .link.current {
-    color: var(--select-text-color);
-  }
+
+    &__item:not(:last-child) {
+      margin-right: 50px;
+    }
+
+    &__link {
+      position: relative;
+    
+      display: block;
+      padding: 32px 0;
+    
+      color: var(--title-text-color);
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 1.14;
+      letter-spacing: 0.02em;
+    
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      
+      &.current {
+           color: var(--select-text-color);
+      }
+
+      &.current::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+      
+        display: block;
+        width: 100%;
+        height: 4px;
+        background: var(--button-select-color);
+        border-radius: 2px;
+      
+        opacity: 1;
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      }
+      &:hover,
+      &:focus {
+        color: var(--select-text-color);
+      }
+    
+    }
+}
+
   
   .auth-nav {
     display: flex;
     margin-left: auto;
+
+    &__item {
+      display: flex;
+    }
+
+    &__item:not(:last-child) {
+      margin-right: 50px;
+    }
   }
   
-  .auth-nav .item {
-    display: flex;
-  }
   
-  .link-contact {
+  .auth-nav__link {
     display: flex;
     padding: 32px 0;
   
@@ -74,33 +84,19 @@
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-  
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
+    &:hover,
+    &:focus {
+      color: var(--select-text-color);
+      fill: var(--select-text-color);
+    }
   }
-  .svg-contact {
+
+  .auth-nav__svg {
     margin-right: 10px;
     margin-top: auto;
     margin-bottom: auto;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
  
-   
-  .link-contact:hover,
-  .link-contact:focus {
-    color: var(--select-text-color);
-    fill: var(--select-text-color);
-  }
-  
-  .auth-nav .item:not(:last-child) {
-    margin-right: 50px;
-  }
-  
-  .auth-nav .link:hover,
-  .auth-nav .link:focus {
-    color: var(--select-text-color);
-  }
-  
-  .main-nav {
-    display: flex;
-    align-items: center;
-  }
