--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,5 +1,20 @@
   
-    .button {
+    
+  .button-list {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+    
+    &__item {
+      display: block;
+      text-align: center;
+
+      &:not(:last-child) {
+        margin-right: 8px;
+      }
+    }
+
+    &__button {
       border-radius: 4px;
       border: none;
       padding: 6px 22px;
@@ -14,23 +29,18 @@
       transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shad 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-    
-    .button:hover,
-    .button:focus {
-      color: var(--button-select-text-color);
-      background-color: var(--button-select-color);
-      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
-        cursor: pointer;
-    }
-  
-  /* Картки портфоліо */
-  .card {
-    color: var(--primary-text-color);
+        &:hover,
+        &:focus {
+          color: var(--button-select-text-color);
+          background-color: var(--button-select-color);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+            0px 2px 2px rgba(0, 0, 0, 0.12);
+            cursor: pointer;
+        } 
+ }
   }
   
-  .shadow-text {
+  .shadow__text {
     display: inline-block;
     position: absolute;
     top: 0;
@@ -50,63 +60,56 @@
   
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      
+  .portfolio-list__item:hover &,
+  .portfolio-list__item:focus & {
+    transform: translateY(0%);
+  }
+
+
   }
   .portfolio-wrap {
     position: relative;
     overflow: hidden;
   }
-  .portfolio-list .item {
-    transition: shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .portfolio-list .item:hover .shadow-text,
-  .portfolio-list .item:focus .shadow-text {
-    transform: translateY(0%);
-  }
-  
-  .portfolio-list .item:hover,
-  .portfolio-list .item:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
-  
-  .card .card-header {
-    color: var(--title-text-color);
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-    font-weight: 700;
-  }
-  
-  .card .card-text {
-    font-size: 16px;
-    line-height: 1.88;
-    font-weight: 400;
-  }
-  
+ 
   .portfolio-list {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
-  }
-  
-  .portfolio-list .project {
+    
+    &__item {
+      transition: shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      &:hover,
+      &:focus {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+          1px 4px 6px rgba(0, 0, 0, 0.16);
+      }
+    
+    }
+
+   &__project {
     padding: 20px 24px;
     border: 1px solid #eeeeee;
     border-top: transparent;
   }
-  
-  .list-buttom {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
   }
-  
-  .list-buttom .item:not(:last-child) {
-    margin-right: 8px;
+ 
+  .portfolio__card {
+    color: var(--primary-text-color);
+
+    .card__header {
+      color: var(--title-text-color);
+      font-size: 18px;
+      line-height: 2;
+      letter-spacing: 0.06em;
+      font-weight: 700;
+    }
+    .card__text {
+      font-size: 16px;
+      line-height: 1.88;
+      font-weight: 400;
+    }
   }
-  
-  .list-buttom.item {
-    display: block;
-    text-align: center;
-  }
+
