--- a/sass/components/_sociallist.scss
+++ b/sass/components/_sociallist.scss
@@ -1,49 +1,27 @@
-.team .social-list {
+.social {
+  display: block;
+  min-width: 206px;
+
+}
+
+.social__svg {
+  width: 20px;
+  height: 20px;
+}
+
+.social__list {
+  display: flex;
+  margin-left: 32px;
+
+  .item {
     display: flex;
-    margin-left: 32px;
-  }
-  
-  .team .social-list {
-    margin-left: 32px;
-  }
-  
-  .svg-social {
-    width: 20px;
-    height: 20px;
   }
 
-  .social-link .title-social {
-    margin-bottom: 20px;
-  
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--addr-color-city);
-  }
-  
-
-  .social-link{
-    display: block;
-    min-width: 206px;
-  
-  }
-  
-  .social-list {
-    display: flex;
-  }
-  
-  .social-list .item {
-    display: flex;
-  }
-  
-  .social-list .item:not(:last-child) {
+  .item:not(:last-child) {
     margin-right: 10px;
   }
-  
-  .social-list .item-link-team {
+
+  .social__link {
     display: flex;
     width: 44px;
     height: 44px;
@@ -54,29 +32,11 @@
     fill: #afb1b8;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
       fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .social-list .item-link-team:hover,
-  .social-list .item-link-team:focus {
-    background: var(--select-text-color);
-    fill: var(--button-select-text-color);
-  }
 
-
-  .social-list .item-link-footer {
-    display: flex;
-    width: 44px;
-    height: 44px;
-    background: rgba(255, 255, 255, 0.1);
-    border-radius: 50%;
-    box-shadow: none;
-    justify-content: center;
-    align-items: center;
-    fill: #ffffff;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      background: var(--select-text-color);
+      fill: var(--button-select-text-color);
+    }
   }
-  
-  .social-list .item-link-footer:hover,
-  .social-list .item-link-footer:focus {
-    background: var(--select-text-color);
-  }
+}
